--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@
 .row{
     display: flex;
 }
+.column{
+    display: flex;
+    flex-direction: column;
+
+}
 
 .top{
 
@@ -43,7 +48,37 @@
 }
 
 .top .left .buttons .Login{
-    width: ;
+    
 }
+.top .left .buttons .Start{
+    background-color: #2860F6;
+    
+}
+
+/* inizio del main  */
+
+
+.container{
+    border: 1px solid red;
+    max-height: 800px;
+    /* test */
+
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.container .title{
+    width: 100%;
+    height: 300px;
+
+    background-color: aqua;
+  
+  
+    /* test */
+}
+
+
+
 
   
