--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,11 @@
     gap: 20px;
 }
 
-.top .right .logo img{
-    width: 80px;
+.top .left .logo img{
+    
     height: 18px;
 }
-.top .right .list-1 ul, .top .left .list-2 ul{
+.top .right .list-2 ul, .top .left .list-1 ul{
   gap: 15px;
 }
 
@@ -43,14 +43,14 @@
     gap: 10px;
 }
 
-.top .right .list-1 li, .top .left .list-2 li {
+.top .right .list-2 li, .top .left .list-1 li {
     list-style-type: none;
 }
 
-.top .left .buttons .Login{
+.top .right .buttons .Login{
     
 }
-.top .left .buttons .Start{
+.top .right .buttons .Start{
     background-color: #2860F6;
     
 }
@@ -60,23 +60,51 @@
 
 .container{
     border: 1px solid red;
-    max-height: 800px;
+    max-height: 740px;
     /* test */
 
-    max-width: 1600px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .container .title{
     width: 100%;
-    height: 300px;
+    height: 320px;
 
     background-color: aqua;
   
   
     /* test */
 }
+
+.container .specification{
+    width: 100%;
+    height: 420px;
+
+    background-color: cadetblue;
+
+    /* test */
+
+}
+.container .description{
+    border: 1px dotted red;
+    height: 420px;
+    
+    /* test */
+}
+
+.container .img-Dp{
+    border: 1px dotted red;
+    flex-grow: 
+    ;
+
+}
+
+
+
+
+
 
 
 
