--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,10 @@
 
     flex-grow: 1;
     
+    background-color: chocolate;
     /* test */
 }
+
 
 .container .img-Dp{
     border: 1px dotted red;
@@ -103,6 +105,47 @@
 
 }
 /* prima parte del main fatta  */
+
+.container-big{
+    border-color: red dotted 1px;
+    
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.business-title{
+  width: 100%;
+  height: 200px;
+
+  background-color: green;
+
+  border: 1px solid red;
+    /* test */
+}
+
+.business-cln{
+    gap: 30px;
+}
+
+.business-cln .cln{
+    border: 1px solid red;
+    background-color: grey;
+    /* test */
+    
+    width: calc(100% / 3 );
+    height: 300px;
+
+}
+.business-bottom{
+    border: 1px solid red;
+    background-color: green;
+    /* test */
+
+    height: 200px;
+    width: 100%;
+}
+    
 
 
 
