--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@
     gap: 50px;
 }
 
-.description .button{
+.button{
     background-color: #2860F6;
     color: white;
 
@@ -168,12 +168,15 @@
 
 .business-title {
     width: 100%;
-    height: 200px;
+     padding: 30px;
 
-    background-color: green;
+     margin-bottom: 20px;
 
-    border: 1px solid red;
-    /* test */
+    
+}
+.business-title h2{
+    margin-bottom: 30px;
+    
 }
 
 .business-cln {
@@ -182,11 +185,15 @@
 
 .business-cln .cln {
     border: 1px solid red;
-    background-color: grey;
+    
     /* test */
 
     width: calc(100% / 3);
-    height: 300px;
+
+    padding: 10px;
+    
+    align-items: flex-start;
+    
 
 }
 
