--- a/css/style.css
+++ b/css/style.css
@@ -333,32 +333,46 @@ hr {
 
 
 .title-operation {
-    background-color: darkgoldenrod;
-
     width: 100%;
-    height: 200px;
 
+    margin-bottom: 50px;
+
+    text-align: center;
+   
 }
+
+    
+
 
 .operation {
 
-    height: 400px;
+    /* height: 400px; */
     flex-wrap: wrap;
+    margin-bottom: 210px;
 }
 
 .operation .img-operation {
-    border: 1px solid red;
-    background-color: coral;
+    
 
-    height: 200px;
+    /* height: 200px; */
     width: calc(100% / 3);
+    padding: 20px;
+}
+.operation .img-operation img{
+    width: 100%;
 }
 
 .team {
-    height: 300px;
-    background-color: antiquewhite;
+   
     /* test */
     width: 100%;
+    text-align: justify;
+
+    margin-bottom: 150px;
+}
+.team h2{
+    font-weight:600;
+    font-size: 30px;
 }
 
 .box-container {
@@ -376,8 +390,23 @@ hr {
 }
 
 .middle-box {
-    background-color: brown;
+    padding: 10px;
+    text-align: left;
+    overflow: auto;
 }
+#midd-img{
+    transform: scale(0.7);
+
+}
+.Des-text{
+    font-size: 15px;
+}
+.Des-hr{
+    margin-bottom: 15px;
+}
+
+
+
 
 .box-left,
 .box-right {
@@ -385,27 +414,113 @@ hr {
 }
 
 .box-img {
-    border: red solid 1px;
-    background-color: gray;
+    border: black solid 1px;
+    
 
     height: 50%;
     width: 50%;
     /* width:calc(100% / 2); */
 
+    justify-content: center;
+
 }
 
+.box-img img{
+    transform: scale(0.3);
+    stroke:#FFFFFF;
+    fill: #FFFFFF;
+}
+
+.box-img #special {
+    transform: scale(0.1) ;
+
+}
+.box-img  #special-2 {
+    transform: scale(0.1) ;
+
+}
+.box-img #special-3{
+    transform: scale(0.2);
+}
+.color-1{
+    background-color:#ACD2A0 ;
+}
+.color-2{
+    background-color:#59132B ;
+}
+.color-3{
+    background-color:#4091C9 ;
+}
+.color-4{
+    background-color:#EA3B2F ;
+}
+.color-5{
+    background-color:#C3292A ;
+}
+.color-6{
+    background-color:#BACFE4 ;
+}
+.color-7{
+    background-color:#13237C ;
+}
+.color-8{
+    background-color:#F9DA56 ;
+}
+
+/* fine blocco quadrato */
+
+
+
 .free-try {
-    height: 300px;
-    background-color: crimson;
+    
+    background-color: #BACFE4;
 
     width: 100%;
+}
+
+
+.container-free{
+    justify-content: space-between;
+    padding: 130px;
+    
+    position: relative;
+
+}
+.container-free h3{
+    font-size: 36px;
+
+    color: #59132B;
+}
+.container-free .free{
+    background-color: white;
+    padding: 5px;
+
+    position: absolute;
+    top:140px;
+    right: 0;
 }
 
 .question {
-    height: 300px;
-    background-color: darkolivegreen;
+    
 
     width: 100%;
+}
+.question-container{
+    padding: 40px;
+}
+    
+.question-container h4{
+    font-size: 40px;
+    font-weight: 600;
+
+}
+
+
+.question-container .border-bot{
+    padding: 20px;
+    border-bottom: 1px solid black;
+
+    font-weight: 700;
 }
 
 /* inizio footer */
@@ -425,7 +540,7 @@ footer {
 }
 
 .lists {
-    height: 400px;
+   padding: 30px;
     /* test */
 
     max-width: 1200px;
@@ -436,11 +551,21 @@ footer {
 
 .list {
     /* height: 80px; */
-    background-color: azure;
+    
 
     width: calc(100% / 5);
 
+    padding: 50px;
 
+    color: white;
+
+
+}
+.list li{
+    padding: 10px;
+}
+.list h6{
+    font-size: 15px;
 }
 
 .language {
