--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,33 @@ hr {
     font-weight: 700;
 
     justify-content: space-between;
+
+    /* test */
+    position: relative;
+
 }
+.QeA{
+    justify-content: space-between;
+}
+
+
+.answer{
+   
+    max-height: 0;
+    overflow: hidden;
+    
+    transition: 0.5s;
+}
+.border-bot:hover .answer{
+   max-height: 100%;
+   padding: 100px;
+   background-color:#F5F5F5 ;
+   border-radius: 15px;
+    
+    
+
+}
+
 
 /* inizio footer */
 footer {
