--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,11 @@ hr {
 
     margin-bottom: 150px;
 }
+.team:hover{
+    border-radius: 15px;
+    box-shadow: 0px 0px 9px #004090;
+    padding: 20px;
+}
 .team h2{
     font-weight:600;
     font-size: 30px;
